--- a/packages/utils/scss/border/_border-color.scss
+++ b/packages/utils/scss/border/_border-color.scss
@@ -1,4 +1,35 @@
-// TODO: docs
+// Border-color documentation sourced from https://developer.mozilla.org/en-US/docs/Web/CSS/border-color.
+
+/// This is equivalent to `border-color: inherit;`. Define the inherited border color
+/// @example border-color: inherit;
+/// @name .k-border-inherit
+/// @group border-color
+/// @contextType css
+
+/// This is equivalent to `border-color: currentColor;`. Define inherited border color
+/// @example border-color: currentColor;
+/// @name .k-border-currentColor
+/// @group border-color
+/// @contextType css
+
+/// This is equivalent to `border-color: transparent;`. Define transparent border color
+/// @example border-color: transparent;
+/// @name .k-border-transparent
+/// @group border-color
+/// @contextType css
+
+/// This is equivalent to `border-color: black;`. Define black border color
+/// @example border-color: black;
+/// @name .k-border-black
+/// @group border-color
+/// @contextType css
+
+/// This is equivalent to `border-color: white;`. Define white border color
+/// @example border-color: white;
+/// @name .k-border-white
+/// @group border-color
+/// @contextType css
+
 
 @mixin kendo-utils--border--border-color() {
 
