--- a/packages/utils/scss/flex-grid/_order.scss
+++ b/packages/utils/scss/flex-grid/_order.scss
@@ -1,14 +1,25 @@
-/// This is equivalent to `order: -9999;`.
+// place-self documentation sourced from https://developer.mozilla.org/en-US/docs/Web/CSS/place-self.
+
+/// This is equivalent to `order: 1;`. An item is in the first ordinal group in a flex or grid container.
+/// @example order: 1;
 /// @name .k-order-first
 /// @group order
 /// @contextType css
 
-/// This is equivalent to `order: 9999;`.
+/// This is equivalent to `order: -9999;`. An item is in the very first ordinal group in a flex or grid container.
+/// @example order: -9999;
+/// @name .k-order-first
+/// @group order
+/// @contextType css
+
+/// This is equivalent to `order: 9999;`. An item is in the very last ordinal group in a flex or grid container.
+/// @example order: 9999;
 /// @name .k-order-last
 /// @group order
 /// @contextType css
 
 /// This is equivalent to `order: 0;`.
+/// @example order: 0;
 /// @name .k-order-none
 /// @group order
 /// @contextType css
