--- a/packages/utils/scss/typography/_font-style.scss
+++ b/packages/utils/scss/typography/_font-style.scss
@@ -1,4 +1,16 @@
-// TODO: docs
+// Font-style documentation sourced from https://developer.mozilla.org/en-US/docs/Web/CSS/font-style.
+
+/// This is equivalent to `font-style: italic;`. Sets italic font style to the element.
+/// @example font-style: italic;
+/// @name .k-font-italic
+/// @group font-style
+/// @contextType css
+
+/// This is equivalent to `font-style: normal;`. Sets normal font style to the element.
+/// @example font-style: normal;
+/// @name .k-font-non-italic
+/// @group font-style
+/// @contextType css
 
 @mixin kendo-utils--typography--font-style() {
 
