--- a/packages/utils/scss/background/_background-color.scss
+++ b/packages/utils/scss/background/_background-color.scss
@@ -1,4 +1,28 @@
-// TODO: docs
+// Background-color documentation sourced from https://developer.mozilla.org/en-US/docs/Web/CSS/background-color.
+
+/// This is equivalent to `background-color: inherit;`. Sets the inherited background color.
+/// @example background-color: inherit;
+/// @name .k-bg-inherit
+/// @group background-color
+/// @contextType css
+
+/// This is equivalent to `background-color: transparent;`. Sets transparent background color.
+/// @example background-color: transparent;
+/// @name .k-bg-transparent
+/// @group background-color
+/// @contextType css
+
+/// This is equivalent to `background-color: black;`. Sets the black background color.
+/// @example background-color: black;
+/// @name .k-bg-black
+/// @group background-color
+/// @contextType css
+
+/// This is equivalent to `background-color: white;`. Sets the white background color.
+/// @example background-color: white;
+/// @name .k-bg-white
+/// @group background-color
+/// @contextType css
 
 @mixin kendo-utils--background--background-color() {
 
