--- a/packages/utils/scss/flex-grid/_grid-auto-flow.scss
+++ b/packages/utils/scss/flex-grid/_grid-auto-flow.scss
@@ -1,4 +1,40 @@
-// TODO: docs
+// Grid-auto-flow documentation sourced from https://developer.mozilla.org/en-US/docs/Web/CSS/grid-auto-flow.
+
+/// This is equivalent to `grid-auto-flow: row;`. Items are placed by filling each row in turn, adding new rows as necessary. If neither row nor column is provided, row is assumed.
+/// @example grid-auto-flow: row;
+/// @name .k-grid-auto-flow-row
+/// @group grid-auto-flow
+/// @contextType css
+
+/// This is equivalent to `grid-auto-flow: column;`. Items are placed by filling each column in turn, adding new columns as necessary.
+/// @example grid-auto-flow: column;
+/// @name .k-grid-auto-flow-column
+/// @group grid-auto-flow
+/// @contextType css
+
+/// This is equivalent to `grid-auto-flow: dense;`. Items are placed by a packing algorithm that attempts to fill in holes earlier in the grid, if smaller items come up later. This may cause items to appear out-of-order, when doing so would fill in holes left by larger items. If it is omitted, a "sparse" algorithm is used, where the placement algorithm only ever moves "forward" in the grid when placing items, never backtracking to fill holes. This ensures that all of the auto-placed items appear "in order", even if this leaves holes that could have been filled by later items.
+/// @example grid-auto-flow: dense;
+/// @name .k-grid-auto-flow-dense
+/// @group grid-auto-flow
+/// @contextType css
+
+/// This is equivalent to `grid-auto-flow: row dense;`. Items are placed by a packing algorithm that attempts to fill in holes earlier in the grid in the row direction, if smaller items come up later. This may cause items to appear out-of-order, when doing so would fill in holes left by larger items. If it is omitted, a "sparse" algorithm is used, where the placement algorithm only ever moves "forward" in the grid when placing items, never backtracking to fill holes. This ensures that all of the auto-placed items appear "in order", even if this leaves holes that could have been filled by later items.
+/// @example grid-auto-flow: row dense;
+/// @name .k-grid-auto-flow-row-dense
+/// @group grid-auto-flow
+/// @contextType css
+
+/// This is equivalent to `grid-auto-flow: col dense;`. Items are placed by a packing algorithm that attempts to fill in holes earlier in the grid in the column direction, if smaller items come up later. This may cause items to appear out-of-order, when doing so would fill in holes left by larger items. If it is omitted, a "sparse" algorithm is used, where the placement algorithm only ever moves "forward" in the grid when placing items, never backtracking to fill holes. This ensures that all of the auto-placed items appear "in order", even if this leaves holes that could have been filled by later items.
+/// @example grid-auto-flow: col dense;
+/// @name .k-grid-auto-flow-col-dense
+/// @group grid-auto-flow
+/// @contextType css
+
+/// This is equivalent to `grid-auto-flow: unset;`.
+/// @example grid-auto-flow: unset;
+/// @name .k-grid-auto-flow-unset
+/// @group grid-auto-flow
+/// @contextType css
 
 @mixin kendo-utils--flex-grid--grid-auto-flow() {
 
