--- a/packages/utils/scss/flex-grid/_justify-self.scss
+++ b/packages/utils/scss/flex-grid/_justify-self.scss
@@ -1,4 +1,81 @@
-// TODO: docs
+// Justify-self documentation sourced from https://developer.mozilla.org/en-US/docs/Web/CSS/justify-self.
+
+/// This is equivalent to `justify-self: auto;`. This property sets the way a box is justified inside its alignment container along the appropriate axis. The value used is the value of the justify-items property of the parents box, unless the box has no parent, or is absolutely positioned, in these cases, auto represents normal.
+/// @example justify-self: auto;
+/// @name .k-justify-self-auto
+/// @group justify-self
+/// @contextType css
+
+/// This is equivalent to `justify-self: normal;`. This property sets the way a box is justified inside its alignment container along the appropriate axis. This property can take one of three different forms: 1) Basic keywords: one of the keyword values normal, auto, or stretch. 2) Baseline alignment: the baseline keyword, plus optionally one of first or last. 3) Positional alignment: a) one of: center, start, end, flex-start, flex-end, self-start, self-end, left, or right. b) Plus optionally safe or unsafe.
+/// @example justify-self: normal;
+/// @name .k-justify-self-normal
+/// @group justify-self
+/// @contextType css
+
+/// This is equivalent to `justify-self: stretch;`. If the combined size of the items is less than the size of the alignment container, any auto-sized items have their size increased equally (not proportionally), while still respecting the constraints imposed by max-height/max-width (or equivalent functionality), so that the combined size exactly fills the alignment container.
+/// @example justify-self: stretch;
+/// @name .k-justify-self-stretch
+/// @group justify-self
+/// @contextType css
+
+/// This is equivalent to `justify-self: center;`. The items are packed flush to each other toward the center of the alignment container.
+/// @example justify-self: center;
+/// @group justify-self
+/// @contextType css
+
+/// This is equivalent to `justify-self: start;`. The item is packed flush to each other toward the start edge of the alignment container in the appropriate axis.
+/// @example justify-self: start;
+/// @name .k-justify-self-start
+/// @group justify-self
+/// @contextType css
+
+/// This is equivalent to `justify-self: end;`. The item is packed flush to each other toward the end edge of the alignment container in the appropriate axis.
+/// @example justify-self: end;
+/// @name .k-justify-self-end
+/// @group justify-self
+/// @contextType css
+
+/// This is equivalent to `justify-self: flex-start;`. For items that are not children of a flex container, this value is treated like start.
+/// @example justify-self: flex-start;
+/// @name .k-justify-self-selft-start
+/// @group justify-self
+/// @contextType css
+
+/// This is equivalent to `justify-self: flex-end;`. For items that are not children of a flex container, this value is treated like end.
+/// @example justify-self: flex-end;
+/// @name .k-justify-self-self-end
+/// @group justify-self
+/// @contextType css
+
+/// This is equivalent to `justify-self: self-start;`. The item is packed flush to the edge of the alignment container of the start side of the item, in the appropriate axis.
+/// @example justify-self: self-start;
+/// @name .k-justify-self-selft-start
+/// @group justify-self
+/// @contextType css
+
+/// This is equivalent to `justify-self: self-end;`. The item is packed flush to the edge of the alignment container of the end side of the item, in the appropriate axis.
+/// @example justify-self: self-end;
+/// @name .k-justify-self-self-end
+/// @group justify-self
+/// @contextType css
+
+/// This is equivalent to `justify-self: baseline;`. Specifies participation in baseline alignment: aligns the alignment baseline of the box's baseline set with the corresponding baseline in the shared baseline set of all the boxes in its baseline-sharing group.
+/// @example justify-self: baseline;
+/// @name .k-justify-self-baseline
+/// @group justify-self
+/// @contextType css
+
+/// This is equivalent to `justify-self: first baseline;`. Specifies participation in first baseline alignment: aligns the alignment baseline of the box's first baseline set with the corresponding baseline in the shared first baseline set of all the boxes in its baseline-sharing group.
+/// @example justify-self: first baseline;
+/// @name .k-justify-self-first-baseline
+/// @group justify-self
+/// @contextType css
+
+/// This is equivalent to `justify-self: last baseline;`. Specifies participation in last baseline alignment: aligns the alignment baseline of the box's last baseline set with the corresponding baseline in the shared last baseline set of all the boxes in its baseline-sharing group. The fallback alignment for first baseline is start, the one for last baseline is end.
+/// @example justify-self: last baseline;
+/// @name .k-justify-self-last-baseline
+/// @group justify-self
+/// @contextType css
 
 @mixin kendo-utils--flex-grid--justify-self() {
 
