--- a/packages/utils/scss/interactivity/_touch-action.scss
+++ b/packages/utils/scss/interactivity/_touch-action.scss
@@ -1,12 +1,62 @@
-// TODO: docs
+// Touch-action documentation sourced from https://developer.mozilla.org/en-US/docs/Web/CSS/touch-action.
 
 /// This is equivalent to `touch-action: none;`. Disable browser handling of all panning and zooming gestures.
+/// @example touch-action: none;
 /// @name .k-touch-action-none
 /// @group touch-action
 /// @contextType css
 
 /// This is equivalent to `touch-action: auto;`. Enable browser handling of all panning and zooming gestures.
+/// @example touch-action: auto;
 /// @name .k-touch-action-auto
+/// @group touch-action
+/// @contextType css
+
+/// This is equivalent to `touch-action: pan-x;`. Enable single-finger horizontal panning gestures. May be combined with pan-y, pan-up, pan-down and/or pinch-zoom.
+/// @example touch-action: pan-x;
+/// @name .k-touch-action-pan-x
+/// @group touch-action
+/// @contextType css
+
+/// This is equivalent to `touch-action: pan-y;`. Enable single-finger vertical panning gestures. May be combined with pan-x, pan-left, pan-right and/or pinch-zoom.
+/// @example touch-action: pan-y;
+/// @name .k-touch-action-pan-y
+/// @group touch-action
+/// @contextType css
+
+/// This is equivalent to `touch-action: pan-left;`. Enable single-finger gestures that begin by scrolling in the left direction(s).
+/// @example touch-action: pan-left;
+/// @name .k-touch-action-pan-left
+/// @group touch-action
+/// @contextType css
+
+/// This is equivalent to `touch-action: pan-right;`. Enable single-finger gestures that begin by scrolling in the right direction(s).
+/// @example touch-action: pan-right;
+/// @name .k-touch-action-pan-right
+/// @group touch-action
+/// @contextType css
+
+/// This is equivalent to `touch-action: pan-up;`. Enable single-finger gestures that begin by scrolling in the up direction(s).
+/// @example touch-action: pan-up;
+/// @name .k-touch-action-pan-up
+/// @group touch-action
+/// @contextType css
+
+/// This is equivalent to `touch-action: pan-down;`. Enable single-finger gestures that begin by scrolling in the down direction(s).
+/// @example touch-action: pan-down;
+/// @name .k-touch-action-pan-down
+/// @group touch-action
+/// @contextType css
+
+/// This is equivalent to `touch-action: pinch-zoom;`. Enable multi-finger panning and zooming of the page. This may be combined with any of the pan- values.
+/// @example touch-action: pinch-zoom;
+/// @name .k-touch-action-pinch-zoom
+/// @group touch-action
+/// @contextType css
+
+/// This is equivalent to `touch-action: manipulation;`. Enable panning and pinch zoom gestures, but disable additional non-standard gestures such as double-tap to zoom. Disabling double-tap to zoom removes the need for browsers to delay the generation of click events when the user taps the screen. This is an alias for "pan-x pan-y pinch-zoom" (which, for compatibility, is itself still valid).
+/// @example touch-action: manipulation;
+/// @name .k-touch-action-manipulation
 /// @group touch-action
 /// @contextType css
 
