--- a/packages/utils/scss/layout/_float.scss
+++ b/packages/utils/scss/layout/_float.scss
@@ -1,16 +1,19 @@
 // Float documentation sourced from https://developer.mozilla.org/en-US/docs/Web/CSS/float.
 
 /// This is equivalent to `float: left;`. The element must float on the left side of its containing block.
+/// @example float: left;
 /// @name .k-float-left
 /// @group float
 /// @contextType css
 
 /// This is equivalent to `float: right;`. The element must float on the right side of its containing block.
+/// @example float: right;
 /// @name .k-float-right
 /// @group float
 /// @contextType css
 
 /// This is equivalent to `float: none;`. The element must not float.
+/// @example float: none;
 /// @name .k-float-none
 /// @group float
 /// @contextType css
