--- a/packages/utils/scss/table/_border-collapse.scss
+++ b/packages/utils/scss/table/_border-collapse.scss
@@ -1,4 +1,16 @@
-// TODO: docs
+// Border-collapse documentation sourced from https://developer.mozilla.org/en-US/docs/Web/CSS/border-collapse.
+
+/// This is equivalent to `border-collapse: collapse;`. Adjacent cells have shared borders (the collapsed-border table rendering model).
+/// @example border-collapse: collapse;
+/// @name .k-border-collapse
+/// @group border-collapse
+/// @contextType css
+
+/// This is equivalent to `border-collapse: separate;`. Adjacent cells have distinct borders (the separated-border table rendering model).
+/// @example border-collapse: separate;
+/// @name .k-border-separate
+/// @group border-collapse
+/// @contextType css
 
 @mixin kendo-utils--table--border-collapse() {
 
