--- a/packages/utils/scss/transform/_flip.scss
+++ b/packages/utils/scss/transform/_flip.scss
@@ -1,9 +1,11 @@
 /// This is equivalent to `transform: scaleX( -1 );`. Flips the element horizontally.
+/// @example transform: scaleX( -1 );
 /// @name .k-flip-h
 /// @group transform
 /// @contextType css
 
 /// This is equivalent to `transform: scaleY( -1 );`. Flips the element vertically.
+/// @example transform: scaleY( -1 );
 /// @name .k-flip-v
 /// @group transform
 /// @contextType css
