--- a/packages/utils/scss/transform/_rotate.scss
+++ b/packages/utils/scss/transform/_rotate.scss
@@ -1,39 +1,47 @@
 /// This is equivalent to `transform: rotate( 0 );`. Does not rotate the element.
+/// @example transform: rotate( 0 );
 /// @name .k-rotate-0
 /// @group transform
 /// @contextType css
 
 /// This is equivalent to `transform: rotate( 45deg );`. Rotates the element by 45 degrees.
+/// @example transform: rotate( 45deg );
 /// @name .k-rotate-45
 /// @group transform
 /// @contextType css
 
 /// This is equivalent to `transform: rotate( 90deg );`. Rotates the element by 90 degrees.
+/// @example transform: rotate( 90deg );
 /// @name .k-rotate-90
 /// @group transform
 /// @contextType css
 
 /// This is equivalent to `transform: rotate( 135deg );`. Rotates the element by 135 degrees.
+/// @example transform: rotate( 135deg );
 /// @name .k-rotate-135
 /// @group transform
 /// @contextType css
 
 /// This is equivalent to `transform: rotate( 180deg );`. Rotates the element by 180 degrees.
+/// @example transform: rotate( 180deg );
 /// @name .k-rotate-180
 /// @group transform
 /// @contextType css
 
 /// This is equivalent to `transform: rotate( 225deg );`. Rotates the element by 225 degrees.
+/// @example transform: rotate( 225deg );
 /// @name .k-rotate-225
 /// @group transform
 /// @contextType css
 
 /// This is equivalent to `transform: rotate( 270deg );`. Rotates the element by 270 degrees.
+/// @example transform: rotate( 270deg );
 /// @name .k-rotate-270
 /// @group transform
 /// @contextType css
 
 /// This is equivalent to `transform: rotate( 315deg );`. Rotates the element by 315 degrees.
+/// @example transform: rotate( 315deg );
 /// @name .k-rotate-315
 /// @group transform
 /// @contextType css
