--- a/packages/utils/scss/typography/_font-size.scss
+++ b/packages/utils/scss/typography/_font-size.scss
@@ -1,4 +1,32 @@
-// TODO: docs
+/// This is equivalent to `font-size: 10px;`. Sets 10px font size to the element.
+/// @example font-size: 10px;
+/// @name .k-font-xs
+/// @group font-size
+/// @contextType css
+
+/// This is equivalent to `font-size: 12px;`. Sets 12px font size to the element.
+/// @example font-size: 12px;
+/// @name .k-font-sm
+/// @group font-size
+/// @contextType css
+
+/// This is equivalent to `font-size: 14px;`. Sets 14px font size to the element.
+/// @example font-size: 14px;
+/// @name .k-font-md
+/// @group font-size
+/// @contextType css
+
+/// This is equivalent to `font-size: 16px;`. Sets 16px font size to the element.
+/// @example font-size: 16px;
+/// @name .k-font-lg
+/// @group font-size
+/// @contextType css
+
+/// This is equivalent to `font-size: 20px;`. Sets 20px font size to the element..
+/// @example font-size: 20px;
+/// @name .k-font-xl
+/// @group font-size
+/// @contextType css
 
 @mixin kendo-utils--typography--font-size() {
 
